// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Supplicate (Approved-only flow) AA FAFE Operations (Swaps and Deposits) AA deposit (USDC): verifies 5% treasury cut and pool state 1`] = `
Object {
  "depositAmount": "100000000000000000000",
  "operation": "AA Deposit (USDC)",
  "poolAmount": "95000000000000000000",
  "poolReserves": Object {
    "after": Object {
      "a": "100000000000000000000",
      "u": "195000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "treasuryBalances": Object {
    "after": Object {
      "asset": "1000000000000000000000",
      "usdc": "1005000000000000000000",
    },
    "before": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
  },
  "treasuryCut": "5000000000000000000",
}
`;

exports[`Supplicate (Approved-only flow) AA FAFE Operations (Swaps and Deposits) AA deposit: verifies 5% treasury cut and pool state 1`] = `
Object {
  "depositAmount": "100000000000000000000",
  "operation": "AA Deposit (ASSET)",
  "poolAmount": "95000000000000000000",
  "poolReserveIncrease": "95000000000000000000",
  "poolReserves": Object {
    "after": Object {
      "a": "195000000000000000000",
      "u": "100000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "treasuryBalances": Object {
    "after": Object {
      "asset": "1005000000000000000000",
      "usdc": "1000000000000000000000",
    },
    "before": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
  },
  "treasuryCut": "5000000000000000000",
  "treasuryCutReceived": "5000000000000000000",
}
`;

exports[`Supplicate (Approved-only flow) AA FAFE Operations (Swaps and Deposits) AA full cycle: swap then deposit profits with treasury tracking 1`] = `
Object {
  "deposit": Object {
    "amount": "50000000000000000000",
    "poolAmount": "47500000000000000000",
    "treasuryCut": "2500000000000000000",
  },
  "operation": "AA Full Cycle (Swap + Deposit)",
  "poolReserves": Object {
    "afterSwap": Object {
      "a": "85000000000000000000",
      "u": "110000000000000000000",
    },
    "final": Object {
      "a": "85000000000000000000",
      "u": "157500000000000000000",
    },
    "initial": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "swap": Object {
    "amountIn": "10000000000000000000",
    "amountOut": "15000000000000000000",
    "expectedOutput": "15000000000000000000",
  },
  "treasuryBalances": Object {
    "afterSwap": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
    "final": Object {
      "asset": "1000000000000000000000",
      "usdc": "1002500000000000000000",
    },
    "initial": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
  },
  "treasuryTotalReceived": "2500000000000000000",
}
`;

exports[`Supplicate (Approved-only flow) AA FAFE Operations (Swaps and Deposits) AA swap: verifies before/after treasury and pool state (ASSET->USDC with +5000 bps) 1`] = `
Object {
  "expectedOutput": "15000000000000000000",
  "operation": "AA Swap (ASSET->USDC, +5000 bps)",
  "poolReserves": Object {
    "after": Object {
      "a": "109999999999999999999",
      "u": "85000000000000000001",
    },
    "before": Object {
      "a": "99999999999999999999",
      "u": "100000000000000000001",
    },
  },
  "swapAmount": "10000000000000000000",
  "swapOutput": "15000000000000000000",
  "treasuryBalances": Object {
    "after": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
    "before": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
  },
}
`;

exports[`Supplicate (Approved-only flow) AA FAFE Operations (Swaps and Deposits) AA swap: verifies before/after treasury and pool state (USDC->ASSET with -5000 bps) 1`] = `
Object {
  "expectedOutput": "15000000000000000000",
  "operation": "AA Swap (USDC->ASSET, -5000 bps)",
  "poolReserves": Object {
    "after": Object {
      "a": "85000000000000000000",
      "u": "110000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "swapAmount": "10000000000000000000",
  "swapOutput": "15000000000000000000",
  "treasuryBalances": Object {
    "after": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
    "before": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
  },
}
`;

exports[`Supplicate (Approved-only flow) AA external profit deposits AA deposit (USDC): verifies 5% treasury cut and pool state 1`] = `
Object {
  "depositAmount": "100000000000000000000",
  "operation": "AA Deposit (USDC)",
  "poolAmount": "95000000000000000000",
  "poolReserves": Object {
    "after": Object {
      "a": "100000000000000000000",
      "u": "195000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "treasuryBalances": Object {
    "after": Object {
      "asset": "1000000000000000000000",
      "usdc": "1005000000000000000000",
    },
    "before": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
  },
  "treasuryCut": "5000000000000000000",
}
`;

exports[`Supplicate (Approved-only flow) AA external profit deposits AA deposit: verifies 5% treasury cut and pool state 1`] = `
Object {
  "depositAmount": "100000000000000000000",
  "operation": "AA Deposit (ASSET)",
  "poolAmount": "95000000000000000000",
  "poolReserveIncrease": "95000000000000000000",
  "poolReserves": Object {
    "after": Object {
      "a": "195000000000000000000",
      "u": "100000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "treasuryBalances": Object {
    "after": Object {
      "asset": "1005000000000000000000",
      "usdc": "1000000000000000000000",
    },
    "before": Object {
      "asset": "1000000000000000000000",
      "usdc": "1000000000000000000000",
    },
  },
  "treasuryCut": "5000000000000000000",
  "treasuryCutReceived": "5000000000000000000",
}
`;

exports[`Supplicate (Approved-only flow) Bypass guard via direct token movement (reserves authoritative) ERC20.transfer and transferFrom into pool address do NOT update pool reserves 1`] = `
Object {
  "note": "Raw token transfers cannot spoof/mutate FAFE reserves",
  "reservesAfter": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
  "reservesBefore": Object {
    "a": "100000000000000000000",
    "u": "100000000000000000000",
  },
}
`;

exports[`Supplicate (Approved-only flow) Snapshots & sqrt pricing (U->A path) captures sqrtPriceX96 movement and reserve deltas for USDC->ASSET 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "caller": Object {
    "after": Object {
      "a": "1500000000000000000",
      "u": "0",
    },
    "before": Object {
      "a": "0",
      "u": "1000000000000000000",
    },
  },
  "direction": "USDC->ASSET",
  "quote": "1500000000000000000",
  "reserves": Object {
    "after": Object {
      "a": "98500000000000000000",
      "u": "101000000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "80227296092510039935477019651",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "39614081257132168796771975168",
      "before": "39614081257132168796771975168",
    },
  },
}
`;

exports[`Supplicate (Approved-only flow) Treasury-approved address executes single-pool rebalance A->U 1`] = `
Object {
  "amountIn": "1000000000000000000",
  "callerBalances": Object {
    "after": Object {
      "a": "0",
      "u": "500000000000000000",
    },
    "before": Object {
      "a": "1000000000000000000",
      "u": "0",
    },
  },
  "direction": "ASSET->USDC",
  "quote": "500000000000000000",
  "reserves": Object {
    "after": Object {
      "a": "101000000000000000000",
      "u": "99500000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
  },
  "routerStatic": "500000000000000000",
  "sqrtPriceX96": Object {
    "implied": Object {
      "after": "78637633816054439274252601737",
      "before": "79228162514264337593543950336",
    },
    "stored": Object {
      "after": "39614081257132168796771975168",
      "before": "39614081257132168796771975168",
    },
  },
}
`;
